Otros/Errorsql.txt
PS D:\D.Drive\python\python_tokio_school\Proyecto_Final>  & 'c:\Users\paula\AppData\Local\Programs\Python\Python313\python.exe' 'c:\Users\paula\.vscode\extensions\ms-python.debugpy-2025.16.0-win32-x64\bundled\libs\debugpy\launcher' '64816' '--' 'D:\D.Drive\python\python_tokio_school\Proyecto_Final\db.py' 
Base de datos 'sanjose_bazar' creada correctamente
Traceback (most recent call last):
  File "c:\Users\paula\AppData\Local\Programs\Python\Python313\Lib\site-packages\mysql\connector\connection_cext.py", line 772, in cmd_query
    self._cmysql.query(
    ~~~~~~~~~~~~~~~~~~^
        query,
        ^^^^^^
    ...<3 lines>...
        query_attrs=self.query_attrs,
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    )
    ^
_mysql_connector.MySQLInterfaceError: Failed to add the foreign key constraint. Missing column 'id_tipo' for constraint 'articulos_ibfk_3' in the referenced table 'tipos'

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "c:\Users\paula\AppData\Local\Programs\Python\Python313\Lib\runpy.py", line 198, in _run_module_as_main
    return _run_code(code, main_globals, None,
                     "__main__", mod_spec)
  File "c:\Users\paula\AppData\Local\Programs\Python\Python313\Lib\runpy.py", line 88, in _run_code
    exec(code, run_globals)
    ~~~~^^^^^^^^^^^^^^^^^^^
  File "c:\Users\paula\.vscode\extensions\ms-python.debugpy-2025.16.0-win32-x64\bundled\libs\debugpy\launcher/../..\debugpy\__main__.py", line 71, in <module>
    cli.main()
    ~~~~~~~~^^
  File "c:\Users\paula\.vscode\extensions\ms-python.debugpy-2025.16.0-win32-x64\bundled\libs\debugpy\launcher/../..\debugpy/..\debugpy\server\cli.py", line 508, in main
    run()
    ~~~^^
  File "c:\Users\paula\.vscode\extensions\ms-python.debugpy-2025.16.0-win32-x64\bundled\libs\debugpy\launcher/../..\debugpy/..\debugpy\server\cli.py", line 358, in run_file
    runpy.run_path(target, run_name="__main__")
    ~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "c:\Users\paula\.vscode\extensions\ms-python.debugpy-2025.16.0-win32-x64\bundled\libs\debugpy\_vendored\pydevd\_pydevd_bundle\pydevd_runpy.py", line 310, in run_path
    return _run_module_code(code, init_globals, run_name, pkg_name=pkg_name, script_name=fname)
  File "c:\Users\paula\.vscode\extensions\ms-python.debugpy-2025.16.0-win32-x64\bundled\libs\debugpy\_vendored\pydevd\_pydevd_bundle\pydevd_runpy.py", line 127, in _run_module_code
    _run_code(code, mod_globals, init_globals, mod_name, mod_spec, pkg_name, script_name)
    ~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "c:\Users\paula\.vscode\extensions\ms-python.debugpy-2025.16.0-win32-x64\bundled\libs\debugpy\_vendored\pydevd\_pydevd_bundle\pydevd_runpy.py", line 118, in _run_code
    exec(code, run_globals)
    ~~~~^^^^^^^^^^^^^^^^^^^
  File "D:\D.Drive\python\python_tokio_school\Proyecto_Final\db.py", line 139, in <module>
    crear_tablas()
    ~~~~~~~~~~~~^^
  File "D:\D.Drive\python\python_tokio_school\Proyecto_Final\db.py", line 76, in crear_tablas
    cursor.execute("""
    ~~~~~~~~~~~~~~^^^^
    CREATE TABLE IF NOT EXISTS articulos (
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    ...<13 lines>...
    );
    ^^
    """)
    ^^^^
  File "c:\Users\paula\AppData\Local\Programs\Python\Python313\Lib\site-packages\mysql\connector\cursor_cext.py", line 353, in execute
    self._connection.cmd_query(
    ~~~~~~~~~~~~~~~~~~~~~~~~~~^
        self._stmt_partition["mappable_stmt"],
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    ...<2 lines>...
        raw_as_string=self._raw_as_string,
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    )
    ^
  File "c:\Users\paula\AppData\Local\Programs\Python\Python313\Lib\site-packages\mysql\connector\opentelemetry\context_propagation.py", line 97, in wrapper
    return method(cnx, *args, **kwargs)
  File "c:\Users\paula\AppData\Local\Programs\Python\Python313\Lib\site-packages\mysql\connector\connection_cext.py", line 781, in cmd_query
    raise get_mysql_exception(
        err.errno, msg=err.msg, sqlstate=err.sqlstate
    ) from err
mysql.connector.errors.DatabaseError: 3734 (HY000): Failed to add the foreign key constraint. Missing column 'id_tipo' for constraint 'articulos_ibfk_3' in the referenced table 'tipos'
PS D:\D.Drive\python\python_tokio_school\Proyecto_Final>  d:; cd 'd:\D.Drive\python\python_tokio_school\Proyecto_Final'; & 'c:\Users\paula\AppData\Local\Programs\Python\Python313\python.exe' 'c:\Users\paula\.vscode\extensions\ms-python.debugpy-2025.16.0-win32-x64\bundled\libs\debugpy\launcher' '55943' '--' 'D:\D.Drive\python\python_tokio_school\Proyecto_Final\db.py'
Base de datos borrada correctamente
 Base de datos borrada.
PS D:\D.Drive\python\python_tokio_school\Proyecto_Final>  d:; cd 'd:\D.Drive\python\python_tokio_school\Proyecto_Final'; & 'c:\Users\paula\AppData\Local\Programs\Python\Python313\python.exe' 'c:\Users\paula\.vscode\extensions\ms-python.debugpy-2025.16.0-win32-x64\bundled\libs\debugpy\launcher' '52517' '--' 'd:\D.Drive\python\python_tokio_school\Proyecto_Final\db.py' 
  File "d:\D.Drive\python\python_tokio_school\Proyecto_Final\db.py", line 1
    import mysql.connector
IndentationError: unexpected indent
PS D:\D.Drive\python\python_tokio_school\Proyecto_Final> 